# RAG

./: .gitignore  pyproject.toml
scripts/: 0_test_config.py  1_test_loaders.py  2_test_chunking.py  3_test_embedding.py  4_test_ingestion.py  5_test_pipeline.py  6_test_ask.py  ingest.py  test_ask.py  test_chunking.py  test_config.py  test_embedding.py  test_llm.py  test_loaders.py  test_pipeline.py
src/rag/: __init__.py  config.py
src/rag/embeddings/: embedding_manager.py
src/rag/generation/: answerer.py  llm_factory.py
src/rag/loaders/: __init__.py  directory.py
src/rag/pipeline/: __init__.py  ingest_pipeline.py  rag_pipeline.py
src/rag/processing/: __init__.py  chunking.py
src/rag/retrieval/: __init__.py  retriever.py
src/rag/store/: __init__.py  chroma_store.py
